--- a/public/style.css
+++ b/public/style.css
@@ -73,7 +73,7 @@ h1 {
    border-bottom: solid 3px white;
 }
 .clock {
-   font-size: 4rem;
+   font-size: 2.5rem;
 }
 .timer {
    text-transform: uppercase;
@@ -97,6 +97,9 @@ td {
 
 @media (min-width: 800px) {
    h1 {
+      font-size: 4rem;
+   }
+   .clock {
       font-size: 4rem;
    }
 }
