--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,8 @@
 
 body, html {
    font-family: 'Open Sans', sans-serif;
+   overflow-x: hidden;
+   position: relative;
 }
 .coming-soon {
    position: relative;
